--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
   <section class="work" id="work">
     <img src="Screenshot 2025-09-19 205417.png" alt="Work 1">
     <img src="Screenshot 2025-09-19 205447.png" alt="Work 2">
-    <img src="Screenshot 2025-09-19 205525.png" alt="Work 3">
+    <img src="Screenshot 2025-09-19 205525.pn" alt="Work 3">
   </section>
 </body>
 </html>
